# RektRAG

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: openai_provider.py
src/rektrag/: __init__.py  engine.py  logger.py  models.py  parser.py  schema.py
